Spring-Boot/trolley/src/main/java/local/example/trolley/api/error/handler/RestApiErrorHandler.java
package local.example.trolley.api.error.handler;

public class RestApiErrorHandler {
}
